# QT_Template

./: CMakeLists.txt
includes/: mainwindow.h
resources/: main.qrc
sources/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
